Temp fix for desktop navigation bar elements bleeding out of the nav bar when hovered.

--- a/NavBar.css
+++ b/NavBar.css
@@ -42,9 +42,13 @@
     font-weight: 800;
 }
 
+/* TODO i dont know why but 100% bleeds out of container 
+I think its related to the hide desktop padding. Look into it later.*/
 .navigation {
     float: right;
-    height: 100%;
+    height: 38%;
+
+    outline: purple;
 }
 
 .hide-desktop a {
